--- a/core/src/main/resources/config.properties
+++ b/core/src/main/resources/config.properties
@@ -1,15 +1,18 @@
 #数据库配置
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.39.1.23:1521/fis
-jdbc.username=rptals
-jdbc.password=o3G4VrdxMme8v9t
+jdbc.url=jdbc:oracle:thin:@10.80.6.157:1521/testdb3
+jdbc.username=SITBAS_XFD_TMK
+jdbc.password=pHKcXSMa8WMJ
 
 #默认excel单元格宽度
 DEFAULT_COLUMN_SIZE=15
-#每个sheet数据量
-SHEET_SIZE=10000
+#每个sheet或者excel文件的数据量  当SCHEMA=1：sheet数据量    SCHEMA=2：excel文件数据量
+SHEET_FILE_SIZE=10000
 #SCHEMA模式：1拆分多个sheet模式  2拆分多个文件模式
 SCHEMA=1
+
 #线程数
-THREAD_NUMBER=50
+THREAD_NUMBER=60
+#每个线程队列的数据量
+QUEUE_LIST_SIZE=5000
 
