--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.billionsfinance</groupId>
-    <artifactId>business-account</artifactId>
+    <artifactId>throw-account</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
