--- a/core/src/main/resources/config.properties
+++ b/core/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #数据库配置
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.80.6.157:1521/testdb3
-jdbc.username=SITBAS_XFD_TMK
-jdbc.password=pHKcXSMa8WMJ
+jdbc.url=jdbc:oracle:thin:@192.168.1.1:1521/orcl
+jdbc.username=test33
+jdbc.password=33242342342
 
 #默认excel单元格宽度
 DEFAULT_COLUMN_SIZE=15
