--- a/core/src/main/resources/config.properties
+++ b/core/src/main/resources/config.properties
@@ -1,19 +1,23 @@
 #数据库配置
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@192.168.1.1:1521/orcl
-jdbc.username=test33
-jdbc.password=33242342342
+jdbc.url=jdbc:oracle:thin:@45.39.1.43:1521/444
+jdbc.username=22
+jdbc.password=11
 
 #默认excel单元格宽度
 DEFAULT_COLUMN_SIZE=15
 #每个sheet或者excel文件的数据量  当SCHEMA=1：sheet数据量    SCHEMA=2：excel文件数据量
-SHEET_FILE_SIZE=10000
+SHEET_FILE_SIZE=100000
 #SCHEMA模式：1拆分多个sheet模式  2拆分多个文件模式
 SCHEMA=2
 
 #线程数
-THREAD_NUMBER=60
+THREAD_NUMBER=70
+
 #每个线程队列的数据量
-QUEUE_LIST_SIZE=5000
+QUEUE_LIST_SIZE=1000
+
+#是否显示动态线程监控 1：显示   0：不显示
+SHOW_THREAD=1
 
 
