--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 
     <modules>
         <module>core</module>
+        <module>spring-batch</module>
+        <module>osjp-spring-batch-example</module>
+        <module>mymq</module>
+        <module>springbootdemo</module>
+        <module>bas</module>
     </modules>
 
 
