--- a/core/pom.xml
+++ b/core/pom.xml
@@ -57,7 +57,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cn.billionsfinance.businessaccount.utils.ExportMain</mainClass>
+                                    <mainClass>cn.billionsfinance.businessaccount.utils.ExportTest</mainClass>
                                 </transformer>
                             </transformers>
                             <artifactSet>
