--- a/core/src/main/resources/config.properties
+++ b/core/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #数据库配置
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@45.39.1.43:1521/444
-jdbc.username=22
-jdbc.password=11
+jdbc.url=jdbc:oracle:thin:@10.83.24.7:1521/testuat2
+jdbc.username=sitbas
+jdbc.password=qW5ekFKYTZI=
 
 #默认excel单元格宽度
 DEFAULT_COLUMN_SIZE=15
@@ -20,4 +20,9 @@ QUEUE_LIST_SIZE=1000
 #是否显示动态线程监控 1：显示   0：不显示
 SHOW_THREAD=1
 
+
+
+
+# 分页大小
+PAGE_SIZE=20000
 
