--- a/core/src/main/resources/config.properties
+++ b/core/src/main/resources/config.properties
@@ -5,6 +5,9 @@ jdbc.username=sitbas
 jdbc.password=qW5ekFKYTZI=
 
 
+#是否启用SCHEMA模式：1启用  0不启用
+EXCEL_SPLIT=0
+
 #SCHEMA模式：1拆分多个sheet模式  2拆分多个文件模式
 SCHEMA=2
 
