--- a/core/pom.xml
+++ b/core/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.8</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
 
     </dependencies>
 
