--- a/core/pom.xml
+++ b/core/pom.xml
@@ -63,7 +63,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cn.billionsfinance.businessaccount.utils.ExportTest</mainClass>
+                                    <mainClass>cn.billionsfinance.businessaccount.utils.ExportMain</mainClass>
                                 </transformer>
                             </transformers>
                             <artifactSet>
