--- a/core/pom.xml
+++ b/core/pom.xml
@@ -58,6 +58,14 @@
             <version>0.8.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
+
+
 
 
     </dependencies>
